# tnt

./: .gitignore  AUTHORS  ChangeLog  LISEZMOI.md  Makefile.am  README  README.md  TODO  aclocal.m4  autogen.sh  configure.ac
data/: Makefile.am  app_menu.ui  tnt.desktop  tnt.desktop.in.in
data/cards/: Makefile.am
data/cards_marseille/: Makefile.am
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
help/: Makefile.am
help/C/: index.page
po/: POTFILES.in  POTFILES.skip  fr.po  tnt.pot
src/: About.vala  Bid.vala  Card.vala  Colour.vala  Game.vala  GraphicalCard.vala  GraphicalHand.vala  GraphicalPlayer.vala  Hand.vala  IAPlayer.vala  Makefile.am  Player.vala  Scores.vala  SynthethicScore.vala  Tnt.vala  main.vala
vapi/: config.vapi
